--- a/index.html
+++ b/index.html
@@ -62,24 +62,24 @@
     <div class="modal fade" id="showTask" tabindex="-1" aria-labelledby="ShowTaskLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header bg-dark">
                     <h5 class="modal-title" id="ShowTaskLabel">Task Details</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body task_modal_body">
                     ...
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer bg-dark">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
 
-            <a class="navbar-brand" href="#">Tasky</a>
+            <a class="navbar-brand color-light text-sm" href="#">Tasky</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -101,7 +101,7 @@
 
         </div>
     </nav>
-    <div class="container">
+    <div class="container ">
         <section class="mt-4">
             <div class="row justify-content-center">
                 <div class="col-md-6">
